# loom-CLI

./: .gitignore  README.md  pyproject.toml
loom/: __init__.py  cli.py  config.py  provider.py
loom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
loom/agent/: graph.py  prompts.py  state.py
loom/session/: db.py  models.py  tree.py
loom/tools/: __init__.py  clang.py  files.py  search.py  shell.py  web.py
loom/ui/: commands.py  confirm.py  input_box.py  logo.py  render.py
output/: index.html
portfolio/: README.md  index.html
portfolio/css/: styles.css
portfolio/js/: app.js  main.js
tests/: test_graph_routing.py  test_models.py  test_permissions.py  test_provider.py  test_session_db.py  test_tools_files.py  test_tools_shell_search.py  test_tui.py
