[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom"
version = "0.1.0"
description = "A terminal-based agentic coding assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
loom = "loom.cli:app"

[tool.setuptools.packages.find]
include = ["loom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
